# v-c-bc

./: .gitignore  config.h.in  meson.build
include/vcblockchain/: byteswap.h  entity_cert.h  error_codes.h  inet.h  limits.h  protocol.h  psock.h  ssock.h  version.h
src/byteswap/: vcbswap_32.c  vchtonl.c  vcntohl.c
src/entity_cert/: entity_cert_internal.h  vcblockchain_entity_get_artifact_id.c  vcblockchain_entity_get_public_encryption_key.c  vcblockchain_entity_get_public_signing_key.c  vcblockchain_entity_private_cert_decode.c  vcblockchain_entity_private_cert_get_private_encryption_key.c  vcblockchain_entity_private_cert_get_private_signing_key.c  vcblockchain_entity_private_cert_public_cert_get.c  vcblockchain_entity_private_cert_resource_handle.c  vcblockchain_entity_public_cert_decode.c  vcblockchain_entity_public_cert_resource_handle.c
src/inet/: vcblockchain_inet_resolve_address.c
src/protocol/: vcblockchain_protoccol_encode_req_block_get.c  vcblockchain_protoccol_encode_req_block_next_id_get.c  vcblockchain_protoccol_encode_resp_latest_block_id_get.c  vcblockchain_protocol_decode_req_artifact_first_txn_id_get.c  vcblockchain_protocol_decode_req_artifact_last_txn_id_get.c  vcblockchain_protocol_decode_req_assert_latest_block_id.c  vcblockchain_protocol_decode_req_assert_latest_block_id_cancel.c  vcblockchain_protocol_decode_req_block_get.c  vcblockchain_protocol_decode_req_block_id_by_height_get.c  vcblockchain_protocol_decode_req_block_next_id_get.c  vcblockchain_protocol_decode_req_block_prev_id_get.c  vcblockchain_protocol_decode_req_connection_close.c  vcblockchain_protocol_decode_req_extended_api.c  vcblockchain_protocol_decode_req_extended_api_enable.c  vcblockchain_protocol_decode_req_extended_api_response.c  vcblockchain_protocol_decode_req_handshake_ack.c  vcblockchain_protocol_decode_req_handshake_request.c  vcblockchain_protocol_decode_req_latest_block_id_get.c  vcblockchain_protocol_decode_req_status_get.c  vcblockchain_protocol_decode_req_transaction_submit.c  vcblockchain_protocol_decode_req_txn_block_id_get.c  vcblockchain_protocol_decode_req_txn_get.c  vcblockchain_protocol_decode_req_txn_next_id_get.c  vcblockchain_protocol_decode_req_txn_prev_id_get.c  vcblockchain_protocol_decode_resp_artifact_first_txn_id_get.c  vcblockchain_protocol_decode_resp_artifact_last_txn_id_get.c  vcblockchain_protocol_decode_resp_assert_latest_block_id.c  vcblockchain_protocol_decode_resp_assert_latest_block_id_cancel.c  vcblockchain_protocol_decode_resp_block_get.c  vcblockchain_protocol_decode_resp_block_id_by_height_get.c  vcblockchain_protocol_decode_resp_block_next_id_get.c  vcblockchain_protocol_decode_resp_block_prev_id_get.c  vcblockchain_protocol_decode_resp_connection_close.c  vcblockchain_protocol_decode_resp_extended_api.c  vcblockchain_protocol_decode_resp_extended_api_client_request.c  vcblockchain_protocol_decode_resp_extended_api_enable.c  vcblockchain_protocol_decode_resp_handshake_ack.c  vcblockchain_protocol_decode_resp_handshake_request.c  vcblockchain_protocol_decode_resp_latest_block_id_get.c  vcblockchain_protocol_decode_resp_status_get.c  (+71 more)
src/psock/: psock_read_authed_data.c  psock_write_authed_data.c
src/ssock/: ssock_init_from_host_address.c  ssock_read_authed_data.c  ssock_read_data.c  ssock_read_int64.c  ssock_read_int8.c  ssock_read_string.c  ssock_read_uint64.c  ssock_read_uint8.c  ssock_write_authed_data.c  ssock_write_data.c  ssock_write_int64.c  ssock_write_int8.c  ssock_write_string.c  ssock_write_uint64.c  ssock_write_uint8.c
src/version/: vcblockchain_version.c
subprojects/: libevent.wrap  lmdb.wrap  rcpr.wrap  vccert.wrap  vccrypt.wrap  vcmodel.wrap  vpr.wrap
test/: dummy_psock.cpp  dummy_psock.h
test/inet/: test_vcblockchain_inet_resolve_address.cpp
test/protocol/: test_vcblockchain_decode_resp_transaction_submit.cpp  test_vcblockchain_protocol_decode_req_artifact_first_txn_id_get.cpp  test_vcblockchain_protocol_decode_req_artifact_last_txn_id_get.cpp  test_vcblockchain_protocol_decode_req_assert_latest_block_id.cpp  test_vcblockchain_protocol_decode_req_assert_latest_block_id_cancel.cpp  test_vcblockchain_protocol_decode_req_block_get.cpp  test_vcblockchain_protocol_decode_req_block_id_by_height_get.cpp  test_vcblockchain_protocol_decode_req_block_next_id_get.cpp  test_vcblockchain_protocol_decode_req_block_prev_id_get.cpp  test_vcblockchain_protocol_decode_req_connection_close.cpp  test_vcblockchain_protocol_decode_req_extended_api.cpp  test_vcblockchain_protocol_decode_req_extended_api_enable.cpp  test_vcblockchain_protocol_decode_req_extended_api_response.cpp  test_vcblockchain_protocol_decode_req_handshake_ack.cpp  test_vcblockchain_protocol_decode_req_handshake_request.cpp  (+95 more)
test/psock/: test_psock.cpp
(+21 files in other folders)
